# cnc-files

./: Cargo.toml
src/: main.rs
static/: index.html  script.js  styles.css
